# oinkoinkrun

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  game.cpp  game.h  main.cpp
src/common/: id.h
src/events/: CMakeLists.txt  events.cpp  events.h
src/graphics/: CMakeLists.txt  image.cpp  image.h  scrolling_background.cpp  scrolling_background.h
src/input/: CMakeLists.txt  input.cpp  input.h
src/scenes/: CMakeLists.txt  mainmenu.cpp  mainmenu.h  scene.cpp  scene.h
src/window/: CMakeLists.txt  window.cpp  window.h
